--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,25 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+    <view
+        android:id="@+id/task1"
+        class="com.mdf.totarget.TaskView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
+    <view
+        android:id="@+id/task2"
+        class="com.mdf.totarget.TaskView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
+
+    <view
+        android:id="@+id/task3"
+        class="com.mdf.totarget.TaskView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
+
+    <!-- В среднем поле отображаем количество баллов -->
+
+    <!-- Снизу три бонуса -->
 </LinearLayout>
