--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res/com.mdf.totarget"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,18 +14,27 @@
     <view
         android:id="@+id/task1"
         class="com.mdf.totarget.TaskView"
+        custom:exampleString="@string/task_default"
+        custom:exampleDimension="@dimen/task_dimension"
+        custom:exampleColor="@color/primary_material_dark"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
     <view
         android:id="@+id/task2"
         class="com.mdf.totarget.TaskView"
+        custom:exampleString="@string/task_default"
+        custom:exampleDimension="@dimen/task_dimension"
+        custom:exampleColor="@color/primary_material_dark"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
     <view
         android:id="@+id/task3"
         class="com.mdf.totarget.TaskView"
+        custom:exampleString="@string/task_default"
+        custom:exampleDimension="@dimen/task_dimension"
+        custom:exampleColor="@color/primary_material_dark"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
