--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <EditText
@@ -11,20 +12,17 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <SeekBar
             android:id="@+id/seek"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/seekCurrentValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:visibility="visible"
-            android:textSize="2sp"
             android:textIsSelectable="false" />
     </LinearLayout>
 
