--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -13,6 +13,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/task_text_hint"
             android:maxLines="1"/>
 
         <LinearLayout
