--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -6,8 +6,9 @@
 
    <EditText
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:hint="@string/task_text_hint"
         android:maxLines="1"/>
 
@@ -15,12 +16,14 @@
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:spinnerMode="dropdown" />
+        android:layout_weight="1"
+        android:spinnerMode="dropdown"/>
 
     <ImageButton
         android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/abc_btn_check_to_on_mtrl_015"/>
+        android:src="@drawable/abc_btn_check_to_on_mtrl_015"
+        android:layout_weight="0"/>
 
 </LinearLayout>
