--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:orientation="horizontal">
 
    <EditText
@@ -23,7 +23,7 @@
         android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/abc_btn_check_to_on_mtrl_015"
+        android:src="@drawable/btn_check_off_disable"
         android:layout_weight="0"/>
 
 </LinearLayout>
